Fixes related products wrapping property omega(), styles.

--- a/resources/stylesheets/src/main.scss
+++ b/resources/stylesheets/src/main.scss
@@ -261,6 +261,21 @@ img {
 }
 .product-related {
 	@include span-columns(3);
+	margin-bottom: 1em;
+	margin-top: 1em;
+	figure {
+		img {
+			border: 1px solid $lightgrey;
+	    width: 100%;
+	    height: auto;
+			&:hover {
+				border-color: $grey;
+			}
+		}
+	}
+	&:nth-of-type(4) {
+		margin-right: 0;
+	}
 }
 // Category page
 .categories {
